test/spec_vectors/ref/fail/module_9.wat
(module (func $block-result-invalid (drop (block (result (ref 1)) (unreachable)))))